Solving the overflow issue,finish the end-page-list

--- a/style.css
+++ b/style.css
@@ -292,10 +292,11 @@ p{
 }
 
 .set-links{
-	width: 10%;
+	width: 16.6%;
 	height: 50%;
 	padding:2%;
 	box-sizing: border-box;
+	
 	
 }
 
@@ -411,7 +412,7 @@ p{
 		margin: 5% auto auto auto;
 	}
 
-	.container-above-links{width:75%}
+	.container-above-links{width:100%}
 	
 	.in-container-above{
 		width:70%;
@@ -430,7 +431,7 @@ p{
 	}
 
 	.in-container-below{
-		width:60%;
+		width:70%;
 		display:flex;
 		flex-direction:row;
 		flex-wrap:wrap;
@@ -440,7 +441,7 @@ p{
 		width:32%;
 	}
 	.nav-bar{
-		width: 20%;
+		width: 30%;
 		background-color:red;
 		height:100%;
 		border-top: 1px solid rgb(251, 255, 28);
@@ -495,12 +496,19 @@ p{
 	padding-bottom: 0%;
 
 	}
+	
 
-	.set-links-last{
 
-		justify-content: left;
-		padding-right: 5%;
+	
+	.head{
+	font-weight: bold;
+	padding-bottom: 10%;
+	}
 
+
+	.set-links-last i{
+
+		font-size: 10px;
 
 	}
 
